# ECE-MAE_team7_final_project

./: .gitignore  README.md
probabalistic_search/: leminscate code
tracking/: README.md
tracking/yolo_inference/: camera.py  config.py  depth_overlay.py  detector.py  frame_store.py  main.py  plan.md  pyproject.toml  reid_manager.py  requirements.txt  server.py  state_machine.py  ui.py
tracking/yolo_inference/static/: index.html
